# GAMES101

./: upload.bat
Assignment0/: CMakeLists.txt  main.cpp
Assignment1/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment2/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: CMakeLists.txt  Shader.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment4/: main.cpp
Assignment5/: CMakeLists.txt  Object.hpp  Renderer.cpp  Renderer.hpp  Triangle.hpp  main.cpp
Assignment6/: AreaLight.hpp  BVH.cpp  Bounds3.hpp  Intersection.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
Assignment6/sources/: BVH.cpp
Assignment7/: BVH.cpp  Bounds3.hpp  Material.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
Assignment7/images/: binary_200x200_spp64.ppm  binary_300x300_spp1024.ppm  binary_784x784_spp1024_thread4.ppm  binary_784x784_spp32.ppm  binary_84x84_spp64_thread4.ppm  ppm.py
testcv/: CMakeLists.txt  main.cpp
